--- a/PloneBoard/locales/ca/LC_MESSAGES/plone.po
+++ b/PloneBoard/locales/ca/LC_MESSAGES/plone.po
@@ -6,9 +6,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Ploneboard-plone-ca\n"
 "POT-Creation-Date: 2009-03-27 21:46+0000\n"
-"PO-Revision-Date: 2008-12-09 08:28+0100\n"
-"Last-Translator: Pilar Marinas Luis <pilar.marinas@upcnet.es>\n"
-"Language-Team: <en@li.org>\n"
+"PO-Revision-Date: 2011-10-17 13:14+0100\n"
+"Last-Translator: Corina Riba Santos <corina.riba@upcnet.es>\n"
+"Language-Team:  <en@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -67,9 +67,8 @@ msgstr "Fòrum"
 msgid "Moderate"
 msgstr "Moderat"
 
-#, fuzzy
 msgid "Moderated forum"
-msgstr "Moderat"
+msgstr "Fòrum moderat"
 
 msgid "Open"
 msgstr "Obrir"
@@ -96,7 +95,6 @@ msgid "Waiting for moderator"
 msgstr "A l'espera del moderador"
 
 #. Flat conversion view
-#, fuzzy
 msgid "conversation_view"
 msgstr "Conversa"
 
@@ -104,9 +102,8 @@ msgid "old_date_format: ${year} ${month} ${day} ${hours}:${minutes}"
 msgstr "data amb format antic: ${year} ${month} ${day} ${hours}:${minutes}"
 
 #. Threaded conversion view
-#, fuzzy
 msgid "threaded_conversation_view"
-msgstr "Mostrar fil de conversa"
+msgstr "Mostrar el fil de la conversa"
 
 #: ./skins/ploneboard_scripts/toPloneboardTime.py:33
 msgid "young_date_format: ${wday} ${hours}:${minutes}"
