--- a/PloneBoard/locales/es/LC_MESSAGES/plone.po
+++ b/PloneBoard/locales/es/LC_MESSAGES/plone.po
@@ -5,8 +5,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Ploneboard 1.0\n"
 "POT-Creation-Date: 2009-03-27 21:46+0000\n"
-"PO-Revision-Date: 2008-12-09 08:41+0100\n"
-"Last-Translator: Pilar Marinas Luis <pilar.marinas@upcnet.es>\n"
+"PO-Revision-Date: 2011-10-17 13:11+0100\n"
+"Last-Translator: Corina Riba Santos <corina.riba@upcnet.es>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -52,7 +52,7 @@ msgid "Lock"
 msgstr "Bloquear"
 
 msgid "Make free-for-all"
-msgstr "Dejar libre para todos"
+msgstr "Dejar visible para todos"
 
 msgid "Make member-posting"
 msgstr "Sólo para miembros"
@@ -67,15 +67,14 @@ msgstr "Foro"
 msgid "Moderate"
 msgstr "Moderar"
 
-#, fuzzy
 msgid "Moderated forum"
-msgstr "Moderar"
+msgstr "Foro moderado"
 
 msgid "Open"
 msgstr "Abierto"
 
 msgid "Ploneboard is the outmost board object, what shows up in your site."
-msgstr "Ploneboard es el objeto extremo del tablero, qué aparece en tu web. "
+msgstr "Un contenedor de conversaciones y debates ordenados por temas."
 
 msgid "Private to members only"
 msgstr "Privado solo para miembros"
@@ -96,7 +95,6 @@ msgid "Waiting for moderator"
 msgstr "Pendientes de moderación"
 
 #. Flat conversion view
-#, fuzzy
 msgid "conversation_view"
 msgstr "Conversación"
 
@@ -104,7 +102,6 @@ msgid "old_date_format: ${year} ${month} ${day} ${hours}:${minutes}"
 msgstr "${year} ${month} ${day} ${hours}:${minutes}"
 
 #. Threaded conversion view
-#, fuzzy
 msgid "threaded_conversation_view"
 msgstr "Mostrar hilo de conversación"
 
