--- a/PlonePopoll/locales/ca/LC_MESSAGES/plonepopoll.po
+++ b/PlonePopoll/locales/ca/LC_MESSAGES/plonepopoll.po
@@ -3,8 +3,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PlonePopoll\n"
 "POT-Creation-Date: 2003-03-17 09:03+0100\n"
-"PO-Revision-Date: 2008-12-09 12:32+0100\n"
-"Last-Translator: Pilar Marinas Luis <pilar.marinas@upcnet.es>\n"
+"PO-Revision-Date: 2011-10-17 11:04+0100\n"
+"Last-Translator: Corina Riba Santos <corina.riba@upcnet.es>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -17,10 +17,10 @@ msgstr ""
 "Preferred-encodings: latin1 utf-8\n"
 
 msgid "Clear results"
-msgstr "Esborrar resultats"
+msgstr "Esborra els resultats"
 
 msgid "Vote"
-msgstr "Voti"
+msgstr "Vota"
 
 msgid "results_cleared"
 msgstr "S'han buidat els resultats de l'enquesta."
@@ -44,7 +44,7 @@ msgid "help_answers"
 msgstr "Introdueixi cada resposta possible en una linea."
 
 msgid "label_choice_count"
-msgstr "Esculli la conta"
+msgstr "Nombre de respostes"
 
 msgid "help_choice_count"
 msgstr "Introdueixi el nombre d'opcions disponibles. "
