--- a/PloneFormGen/locales/ca/LC_MESSAGES/plone.po
+++ b/PloneFormGen/locales/ca/LC_MESSAGES/plone.po
@@ -5,8 +5,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 1.7b5\n"
 "POT-Creation-Date: 2011-10-13 08:33+0000\n"
-"PO-Revision-Date: 2011-10-13 11:06+0100\n"
-"Last-Translator: Ariel von Barnekow <ariel.von.barnekow@upcnet.es>\n"
+"PO-Revision-Date: 2011-10-19 16:24+0100\n"
+"Last-Translator: Corina Riba Santos <corina.riba@upcnet.es>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -240,7 +240,7 @@ msgstr "L'ultim any que apareixerà en el desplegable. Deixi'l buit si vol utili
 
 #: ./content/fields.py:698
 msgid "help_fgformat_text"
-msgstr ""
+msgstr "Control de Presentació"
 
 #. Default: "The number of future years to offer in the year drop-down.\n                 (This is only applicable if you have not specified an ending year.)"
 #: ./content/fields.py:467
@@ -284,7 +284,7 @@ msgstr ""
 
 #: ./content/fields.py:795
 msgid "help_fgmsformat_text"
-msgstr ""
+msgstr "Control de Presentació"
 
 #. Default: "Input tests using HTMLTidy (if installed)."
 #: ./content/fields.py:1018
@@ -293,7 +293,7 @@ msgstr "Prova l'entrada amb HTMLTidy (en cas d'estar instal·lat)."
 
 #: ./content/fields.py:439
 msgid "help_fgshowhm_text"
-msgstr ""
+msgstr "Mostrar opcions de selecció d'hora"
 
 #. Default: "The size of the text-entry box, in characters."
 #: ./content/fieldsBase.py:140
@@ -604,7 +604,7 @@ msgstr "Seleccioni qualsevol de les dades addicional que voldrà guardar amb el 
 
 #: ./content/saveDataAdapter.py:90
 msgid "help_savedatainput_text"
-msgstr ""
+msgstr "Entrada del formulari desada"
 
 #. Default: " Write your script here. "
 #: ./content/customScriptAdapter.py:108
@@ -767,12 +767,12 @@ msgstr "Condició d'execució"
 #. Default: "False Display String"
 #: ./content/fields.py:344
 msgid "label_fgbooleanfalsestring_text"
-msgstr ""
+msgstr "Cadena de presentació falsa"
 
 #. Default: "True Display String"
 #: ./content/fields.py:335
 msgid "label_fgbooleantruestring_text"
-msgstr ""
+msgstr "Cadena de presentació verdadera"
 
 #. Default: "Validator"
 #: ./content/fields.py:326
@@ -1084,7 +1084,7 @@ msgstr "Dades addicionals"
 #. Default: "Saved Form Input"
 #: ./content/saveDataAdapter.py:89
 msgid "label_savedatainput_text"
-msgstr "Entrada del Formulari Guardada"
+msgstr "Entrada del formulari desada"
 
 #. Default: "Script body"
 #: ./content/customScriptAdapter.py:105
