--- a/PloneSurvey/locales/ca/LC_MESSAGES/plonesurvey.po
+++ b/PloneSurvey/locales/ca/LC_MESSAGES/plonesurvey.po
@@ -3,8 +3,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PloneSurvey 1.2.0\n"
 "POT-Creation-Date: 2011-10-03 13:29+0000\n"
-"PO-Revision-Date: 2011-10-10 12:36+0100\n"
-"Last-Translator: Ariel von Barnekow <ariel.von.barnekow@upcnet.es>\n"
+"PO-Revision-Date: 2011-10-21 14:03+0100\n"
+"Last-Translator: Corina Riba Santos <corina.riba@upcnet.es>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -14,7 +14,7 @@ msgstr ""
 "Language-Name: Catalan\n"
 "Preferred-Encodings: utf-8 latin1\n"
 "Domain: plonesurvey\n"
-"X-Poedit-Bookmarks: 133,132,-1,139,-1,-1,-1,-1,-1,169\n"
+"X-Poedit-Bookmarks: -1,-1,-1,139,-1,-1,-1,-1,-1,169\n"
 
 #. Default: "A little Useful"
 #: ../config.py:96
@@ -240,7 +240,7 @@ msgstr "Sí"
 
 #: ../profiles/default/types/Survey.xml
 msgid "You can add questions to surveys."
-msgstr "Pot afegir preguntes al qüestionari."
+msgstr "Un qüestionari en el que es poden afegir preguntes."
 
 #. Default: "Respondent created"
 #: ../skins/plone_survey/validate_add_authenticated_respondent.vpy:41
@@ -419,7 +419,7 @@ msgstr "Introduexi una breu descripció del qüestionari aquí."
 #. Default: "An email invite will be sent to loaded respondents, use '**Name**' for the respondents name, and '**Survey**' for the title of the survey as a link to the survey."
 #: ../content/schemata.py:164
 msgid "help_email_invite"
-msgstr "S'enviarà una invitació epr correu electrònic als equestats, utilitza '**Name**'  per al nom de l'enquestat, i '**Survey**' per al títol del qüestionari i l'enllaç a aquest."
+msgstr "S'enviarà una invitació per correu electrònic als enquestats, utilitza '**Name**'  per al nom de l'enquestat, i '**Survey**' per al títol del qüestionari i l'enllaç a aquest."
 
 #.
 #. Default: "This is the URL that the user will be directed to on completion of the survey.\nUse \"http://site.to.go.to/page\" or \"route/to/page\" for this portal"
@@ -568,7 +568,7 @@ msgstr "Importa enquestats des de una font CSV"
 #. Default: "Email on each submission"
 #: ../config.py:35
 msgid "label_all_emails"
-msgstr "Envia un correu electrònic quan es finalitzi una enquesta"
+msgstr "Envia un correu electrònic quan es finalitzi un qüestionari"
 
 #.
 #. Default: "Allow Anonymous"
@@ -1141,5 +1141,5 @@ msgstr "veure enquestats"
 #. Default: "View survey results in a barchart"
 #: ../skins/plone_survey/survey_view_results.pt:18
 msgid "view_results_barchart"
-msgstr "Mostra resultats de l'enquesta en un gràfic de barres"
+msgstr "Mostra resultats del qüestionari en un gràfic de barres"
 
