--- a/PloneFormGen/locales/ca/LC_MESSAGES/plone.po
+++ b/PloneFormGen/locales/ca/LC_MESSAGES/plone.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 1.7b5\n"
 "POT-Creation-Date: 2011-10-31 07:54+0000\n"
-"PO-Revision-Date: 2011-10-31 10:15+0100\n"
-"Last-Translator: Ariel von Barnekow <ariel.von.barnekow@upcnet.es>\n"
+"PO-Revision-Date: 2011-11-02 13:18+0100\n"
+"Last-Translator: Corina Riba Santos <corina.riba@upcnet.es>\n"
 "Language-Team: Plone i18n <plone-i18n@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -886,7 +886,7 @@ msgstr "Escriu l'script aquí."
 #. Default: " Role under which to run the script. "
 #: ../content/customScriptAdapter.py:94
 msgid "help_script_proxy"
-msgstr "Rol sota el qual es correrà l'script. "
+msgstr "Rol sota el qual s'executarà l'script. "
 
 #. Default: "\n                A TALES expression that will be evaluated to override the \"From\" header.\n                Leave empty if unneeded. Your expression should evaluate as a string.\n                PLEASE NOTE: errors in the evaluation of this expression will cause\n                an error on form display.\n            "
 #: ../content/formMailerAdapter.py:401
